2021-01-06  Jiewen Tan  <jiewen_tan@apple.com>

        [WebAuthn] Adopt new UI for the Client PIN and dismiss flow
        https://bugs.webkit.org/show_bug.cgi?id=219712
        <rdar://problem/72154935>

        Reviewed by Brent Fulgham.

        Covered by manual tests.

        This patch does the following few things:
        1. It tweaks the WebAuthn process as a UI view service to be able to run NearField in the background.
        2. It adopts new SPI for security keys' client pin support.
        3. It adopts new SPI to dismiss the UI when necessary.

        * Platform/spi/Cocoa/AuthenticationServicesCoreSPI.h:
        (NS_ERROR_ENUM):
        Adds new SPI.

        * Scripts/process-entitlements.sh:
        Tweaks WebAuthn process for NFC.

        * UIProcess/WebAuthentication/Cocoa/AuthenticationServicesCoreSoftLink.h:
        * UIProcess/WebAuthentication/Cocoa/AuthenticationServicesCoreSoftLink.mm:
        Paperwork.

        * UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.h:
        * UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:
        (WebKit::AuthenticatorPresenterCoordinator::~AuthenticatorPresenterCoordinator):
        (WebKit::AuthenticatorPresenterCoordinator::updatePresenter):
        (WebKit::AuthenticatorPresenterCoordinator::requestPin):
        (WebKit::AuthenticatorPresenterCoordinator::dimissPresenter):
        (WebKit::AuthenticatorPresenterCoordinator::setPin):
        Adopts new SPIs.

        * UIProcess/WebAuthentication/Cocoa/NfcService.mm:
        (WebKit::NfcService::platformStartDiscovery):
        Tweaks NFC.

        * UIProcess/WebAuthentication/Cocoa/WKASCAuthorizationPresenterDelegate.mm:
        (-[WKASCAuthorizationPresenterDelegate authorizationPresenter:credentialRequestedForLoginChoice:authenticatedContext:completionHandler:]):
        (-[WKASCAuthorizationPresenterDelegate authorizationPresenter:validateUserEnteredPIN:completionHandler:]):
        Adopts new SPIs.
