@@ -104,7 +104,7 @@ typedef NS_ENUM(uint32_t, NFNdefAvailability) {
 @end
 
 @interface NFHardwareManager : NSObject
-+ (instancetype)sharedHardwareManagerWithNoUI;
++ (instancetype)sharedHardwareManager;
 - (NSObject<NFSession> *)startReaderSession:(void(^)(NFReaderSession *session, NSError *error))theStartCallback;
 - (BOOL)areFeaturesSupported:(NFFeature)featureMask outError:(NSError**)outError;
 @end
